clusters/danto/apps/chat/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-db
spec:
  selector:
    app: chat-db
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
