clusters/danto/apps/chat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat
spec:
  selector:
    app: chat
  ports:
    - name: http
      port: 8065
      targetPort: http
